sandbox/output
FizzBuzz.java:9: error: cannot find symbol
        Handler handlerWhizz = new HandlerWhizz(handlerFizz);
                                   ^
  symbol:   class HandlerWhizz
  location: class FizzBuzz
1 error
